--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anshuman's Resume</title>
+    <script>
+        window.location.href = "Index.pdf";
+    </script>
+    <title>Redirecting...</title>
 </head>
 <body>
-    <h1>My Resume</h1>
-    <p><a href="Index.pdf" target="_blank">Click here to view my resume</a></p>
+    <p>If you are not redirected, <a href="Index.pdf">click here</a>.</p>
 </body>
 </html>
